# cpp-build-azure-pipeline-fedora-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  makefile  setup.sh
src/: .clang-tidy  Doxyfile  main.cpp
